--- a/WindowsPrincipal/WindowsPrincipal.csproj
+++ b/WindowsPrincipal/WindowsPrincipal.csproj
@@ -66,6 +66,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeePlaneDataOnClickForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SeePlaneDataOnClickForm.Designer.cs">
+      <DependentUpon>SeePlaneDataOnClickForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SimulationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SeePlaneDataOnClickForm.resx">
+      <DependentUpon>SeePlaneDataOnClickForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SimulationForm.resx">
       <DependentUpon>SimulationForm.cs</DependentUpon>
     </EmbeddedResource>
