--- a/WindowsPrincipal/WindowsPrincipal.csproj
+++ b/WindowsPrincipal/WindowsPrincipal.csproj
@@ -58,6 +58,12 @@
     <Compile Include="InfoVolsForm.Designer.cs">
       <DependentUpon>InfoVolsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoadFileForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoadFileForm.Designer.cs">
+      <DependentUpon>LoadFileForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="InfoVolsForm.resx">
       <DependentUpon>InfoVolsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoadFileForm.resx">
+      <DependentUpon>LoadFileForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
