Netejar el repo i organitzar el sql

--- a/UserWindows/UserWindows.csproj
+++ b/UserWindows/UserWindows.csproj
@@ -99,4 +99,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Content Include="libs\sqlite\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
