--- a/WindowsPrincipal/WindowsPrincipal.csproj
+++ b/WindowsPrincipal/WindowsPrincipal.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsPrincipal</RootNamespace>
     <AssemblyName>WindowsPrincipal</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -228,6 +228,10 @@
     <ProjectReference Include="..\PDFManage\PDFManage.csproj">
       <Project>{a7a953da-0447-452c-9e0c-30c7ab5ea36c}</Project>
       <Name>PDFManage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UserManage\UserManage.csproj">
+      <Project>{e3c22ffd-ad12-41f3-9df3-9177af4d6f3e}</Project>
+      <Name>UserManage</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
