--- a/WindowsPrincipal/WindowsPrincipal.csproj
+++ b/WindowsPrincipal/WindowsPrincipal.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>WindowsPrincipal</RootNamespace>
     <AssemblyName>WindowsPrincipal</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -155,6 +155,12 @@
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManageCompaniesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageCompaniesForm.Designer.cs">
+      <DependentUpon>ManageCompaniesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PlaneDataForm.cs">
       <SubType>Form</SubType>
